# Hayek-Model-Generalization

./: .gitignore  README.md  main.py  pyproject.toml
experiments/: exp_01_friccion_busqueda.py  main_experiment.py
notebooks/: Exploracion.ipynb  Proyecto_Antiguo.ipynb
src/: __init__.py  agents.py  config.py  data_structures.py  logs.py  market.py  statistics.py  visualization.py
